--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,13 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
-        "darkaonline/l5-swagger": "5.7.*",
         "doctrine/dbal": "^2.8",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "pusher/pusher-php-server": "~3.0",
         "tymon/jwt-auth": "^0.5.12",
-        "zircote/swagger-php": "2.*"
+        "zircote/swagger-php": "^3.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
