--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,9 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "predis/predis": "^1.1",
         "pusher/pusher-php-server": "~3.0",
-        "tymon/jwt-auth": "^0.5.12",
+        "tymon/jwt-auth": "dev-develop",
         "zircote/swagger-php": "^3.0"
     },
     "require-dev": {
