--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "ioredis": "^4.2.0",
+        "socket.io": "^2.1.1",
+        "socket.io-client": "^2.1.1"
     }
 }
